<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Webmail</string>
    <string name="hello_world">Hello world!</string>
    <string name="app_version">v1.0</string>
    <string name="author1">Anubhav Joshi</string>
    <string name="author2">Shashank Singh</string>
    
    
    <string name="action_settings">Settings</string>
    <string name="action_compose">Compose</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_delete">Delete</string>
    <string name="action_reply">Reply</string>
    <string name="action_forward">Forward</string>
    <string name="action_unread">Mark Unread</string>
    <string name="action_send">Send</string>
    <string name="action_share">Share</string>
    <string name="action_attachment">Add Files</string>
    
    
    <string name="title_inbox">Inbox</string>
    <string name="title_activity_body">Message</string>
    <string name="title_activity_compose">Compose</string>
    <string name="title_activity_welcome">Webmail</string>
    <string name="title_activity_about">AboutActivity</string>

    <string name="chooser_title">File Selector</string>
    <string name="empty_directory">Empty Directory</string>
    <string name="storage_removed">Storage was removed or unmounted.</string>
    <string name="choose_file">Select a file</string>
    <string name="error_selecting_file">Error selecting File</string>
    <string name="internal_storage">Internal storage</string>
    
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
