<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.webmail.ComposeActivity" >

    <item
        android:id="@+id/action_reply"
        android:icon="@drawable/ic_action_reply"
        android:title="@string/action_reply"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_forward"
        android:icon="@drawable/ic_action_forward"
        android:title="@string/action_forward"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_action_del"
        android:title="@string/action_delete"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        app:showAsAction="always"/>

</menu>